additions to google design challenge

--- a/google-design/index.html
+++ b/google-design/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Google Design Challenge: Case Study</title>
 	<link rel="shortcut icon" href="../favicon.ico" />
-	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/content-mutual/images/bg.png" />
+	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/google-design/images/bg.png" />
 	<meta prefix="og: http://ogp.me/ns#" />
-	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/content-mutual/images/bg.png"/>
+	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/google-design/images/bg.png"/>
 	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. For code samples check out my Github.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -84,7 +84,7 @@
 							</div>			
 							<div class="6u 12u(medium)">
 								<p>
-									I decided to venture out and do some contextual inquiry at a few yard sales I found around Oakland via Craigslist.
+									I decided to venture out and do some contextual inquiry at a few yard/garage sales I found around Oakland. Because it was a holiday weekend the it wasn't too hard to find them.
 								</p>
 								<p>
 									At a high level I was aiming to learn more about these 2 user groups. I created a small list of questions I was hoping to answer about each user group:
@@ -120,6 +120,9 @@
 						<div class="row">
 							<div class="12u$ 12u$(medium)">
 								<h3>KEY FINDINGS / TAKEAWAYS</h3>
+								<p>
+									I was able to talk to 5 salespeople so I chose to focus my findings on the salesperson experience.
+								</p>
 							</div>
 							<div class="6u 12u(medium)">
 								<span class="image fit"><img src="images/friends.png" alt=""/>
@@ -139,7 +142,7 @@
 
 						<div class="row">
 							<div class="6u 12u(medium)">
-								<span class="image fit"><img src="images/lyft.png" alt=""/>
+								<span class="image fit"><img src="images/headless.png" alt=""/>
 								</span>
 							</div>
 							<div class="6u$ 12u$(medium)">
@@ -156,13 +159,13 @@
 								<p>
 
 									<p>
-										<strong>My Takeaway:</strong> I was inspired by the idea of sharing a list of items with a selected group via social media.
+										<strong>My Takeaway:</strong> The experience I create would need to be able to integrate into these channels. If my experience we're to support photos then I would have to make that experience as seemless as possible. 
 									</p>
 								</div>
 							</div>
 							<div class="row">
 								<div class="6u 12u(medium)">
-									<span class="image fit"><img src="images/headless.png" alt=""/>
+									<span class="image fit"><img src="images/lyft.png" alt=""/>
 									</span>
 								</div>
 								<div class="6u$ 12u$(medium)">
@@ -173,7 +176,7 @@
 										This group of salespeople were attempting to target a particular type of person to buy this box of goodies by posting a picture of the item in a Private Lyft Driver Facebook group.
 									</p>
 									<p>
-										<strong>My Takeaway:</strong> I was inspired by the idea of sharing a list of items with a selected group via social media.
+										<strong>My Takeaway:</strong> I was inspired by the idea of sharing a list of items with a selected group via social media. I wanted to work this idea into my user flow.
 									</p>
 								</div>
 							</div>
@@ -187,12 +190,46 @@
 									<h3>Prices are changing all the time!</h3>
 									<p>
 										<strong>Key Finding:</strong>
-										This group of salespeople were attempting to target a particular type of person to buy this box of goodies by posting a picture of the item in a Private Lyft Driver Facebook group.
+										This woman who claimed to be a "Yard Sale Expert" said that the prices of her wares change all the time throughout the sale. "The goal of a yard sale is to sell all your junk. If you don't sell all of you're wares by the end of the day then its not a successful sale–even if that means giving things away."
 									</p>
 									<p>
-										<strong>My Takeaway:</strong> I was inspired by the idea of sharing a list of items with a selected group via social media.
+										<strong>My Takeaway:</strong> If this indeed matches the mental model of the salesperson then the experience that I create <b>needs</b> to account this price variable.
 									</p>
 								</div>
+							</div>
+							<div class="row">
+								<div class="12u$ 12u$(medium)">
+									<h3>User Flow</h3>
+									<p>
+										I was able to talk to 5 salespeople so I chose to focus my findings on the salesperson experience.
+									</p>
+									<span class="image fit"><img src="images/flow-1.svg" alt=""/>
+									</span>
+								</div>
+								<div class="7u 12u(medium)">
+									
+								</div>
+								<div class="5u$ 12u$(medium)">
+
+									<h3>the more the merrier!</h3>
+									<p><strong>Key Finding:</strong> 
+										Almost all of the sales I came across had groups of people running them. This group in particular were really enjoying themselves.
+									</p>
+									<p>
+										<strong>My Takeaway:</strong> When planning a yard sale, salespeople almost never do it solo. Having more for sale attracts more customers, so trying to get your friends to bring their wares is always a "win-win".
+									</p>
+								</div>
+							</div>
+						</section>
+						<section id="cta" class="wrapper style5">
+							<div class="inner">
+								<header>
+									<h3>High Fidelity Prototype</h3>
+									<p>For the higher fidelity mock-ups I decided to use Google's Material Design template for the card based design: <a href="http://www.getmdl.io/templates/index.html">www.getmdl.io</a>. </p>
+								</header>
+								<ul class="actions vertical">
+									<li><a href="../google-design/prototype/" class="button fit">MY PROTOTYPE</a></li>
+								</ul>
 							</div>
 						</section>
 
