--- a/google-design/prototype/index.html
+++ b/google-design/prototype/index.html
@@ -21,6 +21,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+
   <title>Material Design Lite</title>
 
   <!-- Add to homescreen for Chrome on Android -->
@@ -84,7 +87,7 @@
         </ul>
       </div>
     </header>
-    <div class="demo-drawer mdl-layout__drawer mdl-color--cyan-800 mdl-color-text--grey-50">
+    <div class="demo-drawer mdl-layout__drawer mdl-color--grey-100 mdl-color-text--grey-50">
       <header class="demo-drawer-header">
         <img src="images/user.jpg" class="demo-avatar">
         <div class="demo-avatar-dropdown">
@@ -101,7 +104,7 @@
           </ul>
         </div>
       </header>
-      <nav class="demo-navigation mdl-navigation mdl-color--cyan-800 ">
+      <nav class="demo-navigation mdl-navigation mdl-color--grey-100 ">
         <a class="mdl-navigation__link" href=""><i class="material-icons" role="presentation">home</i>My Garage Sales</a>
         <a class="mdl-navigation__link" href=""><i class="material-icons" role="presentation">inbox</i>Inbox</a>
         <a class="mdl-navigation__link" href=""><i class=" material-icons" role="presentation">delete</i>Trash</a>
@@ -118,19 +121,27 @@
     <main class="mdl-layout__content mdl-color--grey-100">
       <div class="mdl-grid demo-content">
         <div class="demo-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
-          <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
+          <div class="mdl-card__title mdl-card--expand mdl-color--white">
             <h2 class="mdl-card__title-text mdl-color-text--white">Selling a motorcycle, 2 chairs, bar stools and more!</h2>
           </div>
           <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-          Lo-fi Pitchfork tousled McSweeney's actually keffiyeh, Carles cold-pressed health goth chia. DIY lo-fi keffiyeh leggings literally fixie artisan ennui. Deep v swag scenester retro, Portland lomo organic pour-over lo-fi Etsy Tumblr Bushwick stumptown.
+            Lo-fi Pitchfork tousled McSweeney's actually keffiyeh, Carles cold-pressed health goth chia. DIY lo-fi keffiyeh leggings literally fixie artisan ennui. Deep v swag scenester retro, Portland lomo organic pour-over lo-fi Etsy Tumblr Bushwick stumptown.
           </div>
           <div class="mdl-card__supporting-text mdl-card--border meta mdl-color-text--grey-600">
             <div class="minilogo"></div>
-            <div>
-              <strong>Hosted by:</strong>
-              <span>You, Sharon and <u>3 more</u></span>
-            </div>
 
+            <div class="minilogo alt"></div>
+            <div>
+              <strong style="font-family: 'Proxima Nova Bold', 'Helvetica', sans-serif; font-weight: 100;
+              ">Hosted by</strong>
+              <span>You and <u>3 others</u></span>
+            </div>
+            <div>
+              <strong style="font-family: 'Proxima Nova Bold', 'Helvetica', sans-serif; font-weight: 100;
+              ">Happening</strong>
+              <span>Sept. 8th</span>
+              <i class="material-icons" role="calendar-check">Cal</i>
+            </div>
           </div>
         </div>
 
