fix svg customm fonts

--- a/google-design/index.html
+++ b/google-design/index.html
@@ -142,7 +142,9 @@
 
 						<div class="row">
 							<div class="6u 12u(medium)">
-								<span class="image fit"><img src="images/headless.png" alt=""/>
+								<span class="image fit"><img src="images/craigslist.png" alt=""/>
+								</span>
+								<span class="image fit"><img src="images/facebook.png" alt=""/>
 								</span>
 							</div>
 							<div class="6u$ 12u$(medium)">
@@ -203,11 +205,11 @@
 									<p>
 										I was able to talk to 5 salespeople so I chose to focus my findings on the salesperson experience.
 									</p>
-									<span class="image fit"><img src="images/flow-1.svg" alt=""/>
-									</span>
+									
 								</div>
 								<div class="7u 12u(medium)">
-									
+									<span class="image fit"><img src="images/flow-1.svg" alt=""/>
+									</span>
 								</div>
 								<div class="5u$ 12u$(medium)">
 
