--- a/google-design/index.html
+++ b/google-design/index.html
@@ -57,11 +57,11 @@
 
 						<div class="row">
 							<div class="12u 12u$(medium)">
-								<h3>the challenge</h3>
+								<h3>the problem</h3>
 							</div>			
 							<div class="6u 12u(medium)">
 								<p>
-									Preparing your own garage sale is often a daunting task. It’s also difficult for potential buyers to discover your merchandise. Design an experience that makes it easier for sellers to intelligently inventory their goods, and helps bargain hunters find the needle in a haystack.
+									"Preparing your own garage sale is often a daunting task. It’s also difficult for potential buyers to discover your merchandise. Design an experience that makes it easier for sellers to intelligently inventory their goods, and helps bargain hunters find the needle in a haystack."
 								</p>
 								<p>
 									The particular part of the prompt that stood out to me was:
@@ -94,12 +94,12 @@
 								</p>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<h4>SALESPERSON</h4>
+								<b>SALESPERSON</b><br/><br/>
 								<ol>
 									<li>Before the sale how do they typically decide what to sell? How do they <b>organize</b> and <b>inventory</b> their goods?</li>
 									<li>What <b>channels of communication</b> do they use to advetise and organize their sale?</li>
 								</ol>
-								<h4>bargain hunter</h4>
+								<b>BARGAIN HUNTER</b><br/><br/>
 								<ol>
 									<li>How do they typically <b>look for and find</b> yard sales? What makes them want to choose one sale over another?</li>
 									<li>What motivates them to go to yard sales?</li>
@@ -144,8 +144,8 @@
 							<div class="6u 12u(medium)">
 								<span class="image fit"><img src="images/craigslist.png" alt=""/>
 								</span>
-								<span class="image fit"><img src="images/facebook.png" alt=""/>
-								</span>
+								<!-- <span class="image fit"><img src="images/facebook.png" alt=""/>
+								</span> -->
 							</div>
 							<div class="6u$ 12u$(medium)">
 
@@ -156,7 +156,10 @@
 									All salespeople I interviewed had advertised their yard sale on social media. <b>Craiglist was the most commonly used, with Facebook close behind.</b>
 								</p>
 								<p>
-									The surprising find for me here was that all the posts were <b>"picture less"</b>. All sales people said they would have posted pictures if they had time.
+									The surprising thing for me for me here was to find that most of the posts <b>had no pictures of their wares</b>. All sales people said they would have posted pictures if they had time.
+								</p>
+								<p>
+									Most commonly the sales people would <b>plan the sale from their laptop</b>. 
 								</p>
 								<p>
 
@@ -205,10 +208,12 @@
 									<p>
 										I was able to talk to 5 salespeople so I chose to focus my findings on the salesperson experience.
 									</p>
+									<span class="image fit"><img src="images/sketch.jpg" alt=""/>
+									</span>
 									
 								</div>
 								<div class="7u 12u(medium)">
-									<span class="image fit"><img src="images/flow-1.svg" alt=""/>
+									<span class="image fit"><img src="images/flow-1.png" alt=""/>
 									</span>
 								</div>
 								<div class="5u$ 12u$(medium)">
