--- a/google-design/index.html
+++ b/google-design/index.html
@@ -204,11 +204,11 @@
 									
 									
 								</div>
-								<div class="5u 12u(medium)">
-									<span class="image fit"><img src="images/my-garage-sales.png" alt=""/>
+								<div class="6u 12u(medium)">
+									<span class="image fit"><img src="images/meonfb.png" alt=""/>
 									</span>
 								</div>
-								<div class="5u$ 12u$(medium)">
+								<div class="6u$ 12u$(medium)">
 
 									<strong>My Concept:</strong>
 										Create a web application that would allow salespeople to create lists of their wares for sale and share that list with channels of communication.
