--- a/google-design/prototype/index.html
+++ b/google-design/prototype/index.html
@@ -144,6 +144,30 @@
             </div>
           </div>
         </div>
+        <div class="demo-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+          <div class="mdl-card__title mdl-card--expand mdl-color--white">
+            <h2 class="mdl-card__title-text mdl-color-text--white">Selling a motorcycle, 2 chairs, bar stools and more!</h2>
+          </div>
+          <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+            Lo-fi Pitchfork tousled McSweeney's actually keffiyeh, Carles cold-pressed health goth chia. DIY lo-fi keffiyeh leggings literally fixie artisan ennui. Deep v swag scenester retro, Portland lomo organic pour-over lo-fi Etsy Tumblr Bushwick stumptown.
+          </div>
+          <div class="mdl-card__supporting-text mdl-card--border meta mdl-color-text--grey-600">
+            <div class="minilogo"></div>
+
+            <div class="minilogo alt"></div>
+            <div>
+              <strong style="font-family: 'Proxima Nova Bold', 'Helvetica', sans-serif; font-weight: 100;
+              ">Hosted by</strong>
+              <span>You and <u>3 others</u></span>
+            </div>
+            <div>
+              <strong style="font-family: 'Proxima Nova Bold', 'Helvetica', sans-serif; font-weight: 100;
+              ">Happening</strong>
+              <span>Sept. 8th</span>
+              <i class="material-icons" role="calendar-check">Cal</i>
+            </div>
+          </div>
+        </div>
 
         <div class="demo-cards mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
           <div class="mdl-card on-the-road-again mdl-cell mdl-cell--12-col">
