--- a/google-design/index.html
+++ b/google-design/index.html
@@ -229,7 +229,7 @@
 <div class="row">
 	<div class="12u$ 12u$(medium)">
 		<h4>Sketching</h4>
-		I sketched out how the list of wares screen here. I employed a bit of card-based design to determine what information would be necessary for each item.
+		I sketched out the list of wares screen here. I employed a bit of card-based design to determine what information would be necessary for each item.
 	</p>
 	<span class="image fit"><img src="images/sketch.jpg" alt=""/>
 	</span>
