work on all of the things

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								<li><a href="../scholastic/">Scholastic</a></li>
 								<li><a href="../cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
-								<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md">Box</a></li>
+								<li><a href="https://github.com/erchsm/box-app">Box</a></li>
 								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
@@ -73,6 +73,7 @@
 
 	<!-- Two -->
 	<section id="two" class="wrapper style5">
+	<div class="inner">
 		<section class="spotlight">
 			<div class="image"><img src="perforce/images/case-study-image.png" alt=""/></div><div class="content">
 			<h2>UX Design:
@@ -138,10 +139,11 @@
 		<h2>Chrome Extension: Box Secure Sharing</h2>
 		<p>This Chrome Extension is designed for two Box users to securely transfer files. This was an exercise in using the Box API and crafting a experience that allows the users feel secure in transfering their files.</p>
 		<ul class="actions">
-			<li><a href="https://github.com/erchsm/box-app/blob/master/README.md" class="button fit">Learn More</a></li>
+			<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md" class="button fit">Learn More</a></li>
 		</ul>
 	</div>
 </section>
+</div>
 </section>
 
 <!-- CTA -->
