--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
 
 		<!-- Banner -->
 		<section id="banner">
-			<div class="inner">
-				<h2>Eric S.<br/>UI <span class="x">&times;</span> UX</h2>
-				<p></p>
-			</div>
-			<div class="trigger"></div>
+			<div class="banner blur">
+				<div class="inner">
+					<h2>Eric S.<br/>UI <span class="x">&times;</span> UX</h2>
+					<p></p>
+				</div>
+				<div class="trigger"></div>
 
-			<a href="#one" class="more scrolly">Learn More</a>
+				<a href="#one" class="more scrolly">Learn More</a>
+			</div>
 		</section>
 
 		<!-- One -->
@@ -73,76 +75,76 @@
 
 	<!-- Two -->
 	<section id="two" class="wrapper style5">
-	<div class="inner">
-		<section class="spotlight">
-			<div class="image"><img src="perforce/images/case-study-image.png" alt=""/></div><div class="content">
-			<h2>UX Design:
-				Helix Product Suite</h2>
-				<p>The Helix product suite is a collection of projects that I worked on at Perforce. The goal of these projects was to create version control tools for the less technical user.</p>
-				<!-- My goals for this project we're to increase accessibility -->
+		<div class="inner">
+			<section class="spotlight">
+				<div class="image"><img src="perforce/images/case-study-image.png" alt=""/></div><div class="content">
+				<h2>UX Design:
+					Helix Product Suite</h2>
+					<p>The Helix product suite is a collection of projects that I worked on at Perforce. The goal of these projects was to create version control tools for the less technical user.</p>
+					<!-- My goals for this project we're to increase accessibility -->
+					<ul class="actions">
+						<li><a href="perforce/" class="button fit">Learn More</a></li>
+					</ul>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="givjoy/images/case-study-image.png" alt="" /></div><div class="content">
+				<h2>Mobile Design:<br />
+					ProtoHack &times; GivJoy</h2>
+					<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
+					<ul class="actions">
+						<li><a href="givjoy/" class="button fit">Learn More</a></li>
+					</ul>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="google-design/images/case-study-image.png" alt="" /></div><div class="content">
+				<h2>Interaction Design:<br />
+					Google Design Challenge</h2>
+					<p>Preparing your own garage sale is often a daunting task. It’s also difficult for potential buyers to discover your merchandise. I designed an experience that makes it easier for sellers to intelligently inventory their goods, and helps bargain hunters find the needle in a haystack.</p>
+					<ul class="actions">
+						<li><a href="google-design/" class="button fit">Learn More</a></li>
+					</ul>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="scholastic/images/Eric/case-study-image.png" alt="" /></div><div class="content">
+				<h2>UX Strategy:<br />
+					Scholastic</h2>
+					<p>My team and I were asked to take advantage of digital technology to encourage children to read books outside of school. We came up with two features that could be seamlessly integrated into Scholastic's existing website.</p>
+					<ul class="actions">
+						<li><a href="scholastic/" class="button fit">Learn More</a></li>
+					</ul>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="cisco/images/case-study-image.png" alt="" /></div><div class="content">
+				<h2>UI Engineering:
+					Cisco</h2>
+					<p>My second position at Cisco involved creating web UI using HTML, CSS & Javascript. In my first role I created API documentation to assist developers in using out product.</p>
+					<ul class="actions">
+						<li><a href="cisco/" class="button fit">Learn More</a></li>
+					</ul>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="https://raw.githubusercontent.com/erchsm/M-E/master/screenshots/case-study-image.png" alt="" /></div><div class="content">
+				<h2>Mobile Design: M&E</h2>
+				<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat. Our target audience was college students. The application allows users to plan meetups using scales such as time, date and location preferences.</p>
 				<ul class="actions">
-					<li><a href="perforce/" class="button fit">Learn More</a></li>
+					<li><a href="https://github.com/erchsm/M-E/blob/master/README.md" class="button fit">Learn More</a></li>
 				</ul>
-			</div>
+			</div>    
 		</section>
 		<section class="spotlight">
-			<div class="image"><img src="givjoy/images/case-study-image.png" alt="" /></div><div class="content">
-			<h2>Mobile Design:<br />
-				ProtoHack &times; GivJoy</h2>
-				<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
-				<ul class="actions">
-					<li><a href="givjoy/" class="button fit">Learn More</a></li>
-				</ul>
-			</div>
-		</section>
-		<section class="spotlight">
-			<div class="image"><img src="google-design/images/case-study-image.png" alt="" /></div><div class="content">
-			<h2>Interaction Design:<br />
-				Google Design Challenge</h2>
-				<p>Preparing your own garage sale is often a daunting task. It’s also difficult for potential buyers to discover your merchandise. I designed an experience that makes it easier for sellers to intelligently inventory their goods, and helps bargain hunters find the needle in a haystack.</p>
-				<ul class="actions">
-					<li><a href="google-design/" class="button fit">Learn More</a></li>
-				</ul>
-			</div>
-		</section>
-		<section class="spotlight">
-			<div class="image"><img src="scholastic/images/Eric/case-study-image.png" alt="" /></div><div class="content">
-			<h2>UX Strategy:<br />
-				Scholastic</h2>
-				<p>My team and I were asked to take advantage of digital technology to encourage children to read books outside of school. We came up with two features that could be seamlessly integrated into Scholastic's existing website.</p>
-				<ul class="actions">
-					<li><a href="scholastic/" class="button fit">Learn More</a></li>
-				</ul>
-			</div>
-		</section>
-		<section class="spotlight">
-			<div class="image"><img src="cisco/images/case-study-image.png" alt="" /></div><div class="content">
-			<h2>UI Engineering:
-				Cisco</h2>
-				<p>My second position at Cisco involved creating web UI using HTML, CSS & Javascript. In my first role I created API documentation to assist developers in using out product.</p>
-				<ul class="actions">
-					<li><a href="cisco/" class="button fit">Learn More</a></li>
-				</ul>
-			</div>
-		</section>
-		<section class="spotlight">
-			<div class="image"><img src="https://raw.githubusercontent.com/erchsm/M-E/master/screenshots/case-study-image.png" alt="" /></div><div class="content">
-			<h2>Mobile Design: M&E</h2>
-			<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat. Our target audience was college students. The application allows users to plan meetups using scales such as time, date and location preferences.</p>
+			<div class="image"><img src="https://raw.githubusercontent.com/erchsm/box-app/gh-pages/screenshots/case-study-image.png" alt="" /></div><div class="content">
+			<h2>Chrome Extension: Box Secure Sharing</h2>
+			<p>This Chrome Extension is designed for two Box users to securely transfer files. This was an exercise in using the Box API and crafting a experience that allows the users feel secure in transfering their files.</p>
 			<ul class="actions">
-				<li><a href="https://github.com/erchsm/M-E/blob/master/README.md" class="button fit">Learn More</a></li>
+				<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md" class="button fit">Learn More</a></li>
 			</ul>
-		</div>    
+		</div>
 	</section>
-	<section class="spotlight">
-		<div class="image"><img src="https://raw.githubusercontent.com/erchsm/box-app/gh-pages/screenshots/case-study-image.png" alt="" /></div><div class="content">
-		<h2>Chrome Extension: Box Secure Sharing</h2>
-		<p>This Chrome Extension is designed for two Box users to securely transfer files. This was an exercise in using the Box API and crafting a experience that allows the users feel secure in transfering their files.</p>
-		<ul class="actions">
-			<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md" class="button fit">Learn More</a></li>
-		</ul>
-	</div>
-</section>
 </div>
 </section>
 
