--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Eric Smith's Portfolio</title>
-	<link rel="shortcut icon" href="favicon.ico" />
+	<!-- <link rel="shortcut icon" href="favicon.ico" /> -->
+	<link rel="icon" type="image/png" href="favicon.png" />
 	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/banner.png" />
 	<meta prefix="og: http://ogp.me/ns#" />
 	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/banner.png"/>
