--- a/cisco/index.html
+++ b/cisco/index.html
@@ -89,6 +89,10 @@
 					<li><b>Generating lots of JSON examples and use cases.</b> This included creating scripts using SOAPUI to completely build out these use cases.</li>	
 				</ol>	
 			</div>
+			<div class="12u 12u(medium)">
+				<iframe src="https://developer.cisco.com/site/wae/documentation/tutorial/#wan-automation-engine-wae-tutorial" style="
+				width: 100%; overflow-x: hidden; overflow-y:scroll; min-height:640px; "></iframe>
+			</div>
 		</div>
 		<div class="row">
 			<div class="6u 12u(medium)">
