--- a/cisco/index.html
+++ b/cisco/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Cisco: Case Study</title>
-	<link rel="shortcut icon" href="../favicon.ico" />
+	<!-- <link rel="shortcut icon" href="../favicon.ico" /> -->
+	<link rel="icon" type="image/png" href="../favicon.png">
 	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/cisco/images/bg.png" />
 	<meta prefix="og: http://ogp.me/ns#" />
 	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/cisco/images/bg.png"/>
@@ -66,34 +67,46 @@
 					The WAN Automation Engine (WAE) is a set of web API's designed to provide bandwidth orchestration capability for a Wide Area Network in the Service Provider environment. 
 				</p>
 
-				<ul class="actions vertical">
-					<li><a href="https://developer.cisco.com/site/wae/documentation/tutorial/#wan-automation-engine-wae-tutorial" class="button ">A WAE Tutorial</a></li>
-					<li><a href="https://developer.cisco.com/site/wae/tools/soap-ui-scripts/#using-soapui-with-wae-a-tutorial" class="button ">Our SoapUI API User Guide</a></li>
-					<li><a href="https://developer.cisco.com/fileMedia/download/26c5b701-3a2e-4174-b53f-501a45518d59" class="button ">Postman Sample JSON</a></li>
-					<li><a href="https://developer.cisco.com/fileMedia/download/6622761e-ffdf-4fdf-90b2-bf8a25563b13" class="button ">SOAPUI Scripts</a></li>
-				</ul>
+
 
 			</div>
 			<div class="6u 12u(medium)">
 				<p>
 					Our API's were designed for use by a developer working in an organization that provides network services. Much of my job was figuring out the best way to deliver these API's to them and make them <strong>as easy to use as possible</strong>. 
 				</p>
-				<p>
-					I approached designing the best experience for these developers by:
-				</p>
+			</div>
+		</div>
+		<div class="row">
+			<p>
+				I approached designing the best experience for these developers by:
 				<ol>
 					<li><b>Integrating an API documentation plug-in into our build.</b> This allowed for more streamlined documentation to be delivered to our developers.</li> 
 
 					<li><b>Analyzing the tools that developers use for using and developing API's.</b> In this process I discovered SOAPUI and Postman to be commonly used tools.</li> 
 
 					<li><b>Generating lots of JSON examples and use cases.</b> This included creating scripts using SOAPUI to completely build out these use cases.</li>	
-				</ol>	
-			</div>
-			<div class="12u 12u(medium)">
-				<iframe src="https://developer.cisco.com/site/wae/documentation/tutorial/#wan-automation-engine-wae-tutorial" style="
-				width: 100%; overflow-x: hidden; overflow-y:scroll; min-height:640px; "></iframe>
+				</ol>
+			</p>			
+		</div>
+	</div>
+
+</div></section>
+<iframe src="https://developer.cisco.com/site/wae/documentation/tutorial/#wan-automation-engine-wae-tutorial" style="
+width: 90%; margin-left: 5%; overflow-x: hidden; overflow-y:scroll; min-height:640px; box-shadow: -1px 1px 0 #ddd; background-color: #ddd; "></iframe>
+<section class="wrapper style5">
+	<div class="inner">
+		<div class="row">
+			<div class="12u 12u(medium">
+				<h4>External Links</h4>
+				<ul class="actions ">
+					<li><a href="https://developer.cisco.com/site/wae/documentation/tutorial/#wan-automation-engine-wae-tutorial" class="button ">A WAE Tutorial</a></li>
+					<li><a href="https://developer.cisco.com/site/wae/tools/soap-ui-scripts/#using-soapui-with-wae-a-tutorial" class="button ">Our SoapUI API User Guide</a></li>
+					<li><a href="https://developer.cisco.com/fileMedia/download/26c5b701-3a2e-4174-b53f-501a45518d59" class="button ">Postman Sample JSON</a></li>
+					<li><a href="https://developer.cisco.com/fileMedia/download/6622761e-ffdf-4fdf-90b2-bf8a25563b13" class="button ">SOAPUI Scripts</a></li>
+				</ul>
 			</div>
 		</div>
+
 		<div class="row">
 			<div class="6u 12u(medium)">
 				<h4>UI Engineer</h4>
