--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Eric Smith's Portfolio</title>
+	<!--[if lte IE 9]><link rel="shortcut icon" href="favicon.ico" /><![endif]-->
 	<!-- <link rel="shortcut icon" href="favicon.ico" /> -->
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/banner.png" />
