fix to navigation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Eric Smith's Portfolio</title>
 	<!--[if lte IE 9]><link rel="shortcut icon" href="favicon.ico" /><![endif]-->
-	<!-- <link rel="shortcut icon" href="favicon.ico" /> -->
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/banner.png" />
 	<meta prefix="og: http://ogp.me/ns#" />
@@ -33,11 +32,11 @@
 						<div id="menu">
 							<ul>
 								<li><a href=".">Home</a></li>
-								<li><a href="../perforce/">Perforce</a></li>
-								<li><a href="../givjoy/">GivJoy</a></li>
-								<li><a href="../google-design/">Google Design</a></li>
-								<li><a href="../scholastic/">Scholastic</a></li>
-								<li><a href="../cisco/">Cisco</a></li>
+								<li><a href="perforce/">Perforce</a></li>
+								<li><a href="givjoy/">GivJoy</a></li>
+								<li><a href="google-design/">Google Design</a></li>
+								<li><a href="scholastic/">Scholastic</a></li>
+								<li><a href="cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
 								<li><a href="https://github.com/erchsm/box-app">Box</a></li>
 								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
