added some wrap & responsive changes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 						<div id="menu">
 							<ul>
 								<li><a href=".">Home</a></li>
+								<li><a href="wrap/">Wrap Media</a></li>
 								<li><a href="perforce/">Perforce</a></li>
 								<li><a href="givjoy/">GivJoy</a></li>
 								<li><a href="google-design/">Google Design</a></li>
